--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "dotenv": "^16.4.7",
         "express": "^4.21.2",
         "mongoose": "^8.13.2",
         "swagger-jsdoc": "^6.2.8",
