[SERV}#10: URL 오타 수정

--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,6 @@
 # MongoDB 연결용 템플릿 (.env.template)
 # 이 파일을 복사해서 각자 root dir에 .env로 만들고 ID/비번은 공지받은 아이디 비번 넣으면 됩니다.
 
-MONGO_URI=mongodb+srv://<your-username>:<your-password>@cluster0.mongodb.net/VoiceKioskDB?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://<ID>:<PASSWORD>@cafecluster.hvbhfmr.mongodb.net/VoiceKioskDB?retryWrites=true&w=majority&appName=CafeCluster\
+
+
