--- a/package.json
+++ b/package.json
@@ -1,27 +1,27 @@
 {
-    "name": "server",
-    "version": "1.0.0",
-    "description": "==============",
-    "main": "app.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "dev": "node app.js"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "dotenv": "^16.4.7",
-        "express": "^4.21.2",
-        "mongoose": "^8.13.2",
-        "swagger-jsdoc": "^6.2.8",
-        "swagger-ui-express": "^5.0.1"
-    },
-    "devDependencies": {
-        "chai": "^5.2.0",
-        "mocha": "^11.1.0",
-        "supertest": "^7.1.0",
-        "vite": "^6.2.5"
-    },
-    "type": "module"
+  "name": "server",
+  "version": "1.0.0",
+  "description": "==============",
+  "main": "app.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "node app.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "chai": "^4.5.0",
+    "dotenv": "^16.4.7",
+    "esm": "^3.2.25",
+    "express": "^4.21.2",
+    "mongoose": "^8.13.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
+  },
+  "devDependencies": {
+    "mocha": "^11.1.0",
+    "supertest": "^7.1.0",
+    "vite": "^6.2.5"
+  }
 }
