--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "chai": "^4.5.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "esm": "^3.2.25",
     "express": "^4.21.2",
