--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "uuid": "^11.1.0"
   },
   "devDependencies": {
+    "@types/uuid": "^10.0.0",
     "mocha": "^11.1.0",
     "supertest": "^7.1.0",
     "vite": "^6.2.6"
